[#22312] fix usage of getLast()